# agents

.claude/skills/tech-article-extractor/: SKILL.md
code-review-tool/: Cargo.toml  review-config.toml  test-output.md
code-review-tool/perspectives/: rust-review.md  security.md
code-review-tool/prompts/: reviewer.md
code-review-tool/src/: config.rs  error.rs  git.rs  main.rs  output.rs
code-review-tool/src/review/: engine.rs  message.rs  mod.rs
dotfiles/claude/: CLAUDE.md
